--- a/sections/compare-notification.liquid
+++ b/sections/compare-notification.liquid
@@ -69,17 +69,23 @@
                             {{- 'products.product.wishlist_remove.one' | t: product_title: title }}
                         </p>
                 {% endcase %}
+                {% if action[1] == 'addcompare' or action[1] == 'removecompare' or action[1] == 'fullcompare' %}
+                    <div class="modal__button modal__button--compare">
+                        <a href="/collections/all" class="button button--link js-modal-close">
+                            {{- 'products.product.continue_shopping' | t -}}
+                        </a>
 
-                <div class="modal__button">
-                    <a href="/collections/all" class="button button--link js-modal-close">
-                        {{- 'products.product.continue_shopping' | t -}}
-                    </a>
-                    {% if action[1] == 'addcompare' or action[1] == 'removecompare' %}
                         <a href="/pages/compare" class="button">{{ 'products.product.go_to_compare' | t }}</a>
-                    {% else %}
-                        <a href="/pages/whishlist" class="button">{{ 'products.product.go_to_compare' | t }}</a>
-                    {% endif %}
-                </div>
+                    </div>
+                {% else %}
+                    <div class="modal__button modal__button--wishlist">
+                        <a href="/collections/all" class="button button--link js-modal-close">
+                            {{- 'products.product.continue_shopping' | t -}}
+                        </a>
+
+                        <a href="/pages/whishlist" class="button">{{ 'products.product.go_to_wishlist' | t }}</a>
+                    </div>
+                {% endif %}
             </div>
             <div class="modal__close">
                 <button
