--- a/sections/main-search.liquid
+++ b/sections/main-search.liquid
@@ -5,10 +5,16 @@
     assign full_width = settings.full_width
     assign content_alignment = settings.content_alignment
 
+    assign new_badge = settings.new_badge
+    assign show_vendor = settings.show_vendor
+    assign show_rating = settings.show_rating
+
     assign add_btn = settings.enable_add_btn
     assign btn = settings.btn
     assign variant_type = settings.variant
     assign prod_img_size = settings.prod_img_size
+    assign secondary_image = settings.show_secondary_image
+    assign notify_me = settings.notify_me
 
     assign price_variant = false
     if btn == 'quick'
@@ -62,6 +68,9 @@
 
 {{ 'section-main-search.css' | asset_url | stylesheet_tag }}
 {{ 'component-card-post.css' | asset_url | stylesheet_tag }}
+
+{{ 'component-card-products.css' | asset_url | stylesheet_tag }}
+{{ 'component-rating.css' | asset_url | stylesheet_tag }}
 
 {%- liquid
     comment
@@ -229,13 +238,17 @@
                                                     <li class="grid__item template-main-search-tabs__item js-main-search-item">
                                                         {% render 'card-product',
                                                             product: result,
-                                                            show_vendor: true,
+                                                            show_vendor: show_vendor,
+                                                            show_rating: show_rating,
+                                                            new_badge: new_badge,
                                                             show_quantity: false,
                                                             use_variant: price_variant,
                                                             variant_type: variant_type,
                                                             add_btn: add_btn,
                                                             btn: btn,
                                                             img_size: prod_img_size,
+                                                            secondary_image: secondary_image,
+                                                            notify_me: notify_me,
                                                             image_custom: false,
                                                             fill: false
                                                         %}
