add compare page

--- a/sections/main-compare.liquid
+++ b/sections/main-compare.liquid
@@ -29,14 +29,14 @@
 %}
 
 {% capture styles %}
-    --background-color-wishlist: {{ bg_color }};
-    --title-post-color-wishlist: {{ title_color }};
-    --text-post-color-wishlist: {{ text_color }};
-    --link-post-color-wishlist: {{ link_color }};
+    --background-color-compare: {{ bg_color }};
+    --title-post-color-compare: {{ title_color }};
+    --text-post-color-compare: {{ text_color }};
+    --link-post-color-compare: {{ link_color }};
 
-    --width-wishlist: {{ width }}px;
-    --pad-top-wishlist: {{ pad_top }}px;
-    --pad-bot-wishlist: {{ pad_bot }}px;
+    --width-compare: {{ width }}px;
+    --pad-top-compare: {{ pad_top }}px;
+    --pad-bot-compare: {{ pad_bot }}px;
 {% endcapture %}
 
 {%- assign styles = styles | strip_newlines -%}
@@ -45,63 +45,17 @@
 {{ 'component-rating.css' | asset_url | stylesheet_tag }}
 {{ 'component-card-products.css' | asset_url | stylesheet_tag }}
 
-<div class="main-wishlist-page full_width--{{ full_width }} content--{{ content_alignment }}" style="{{ styles }}">
+<div class="main-compare-page full_width--{{ full_width }} content--{{ content_alignment }}" style="{{ styles }}">
     <div class="container">
-        <page-wishlist>
+        <page-compare>
             <div class="product-list-container js-list-container" data-size="portrait"></div>
-            <h3 class="main-wishlist-page__title js-page-wishlist-title">
+            <h3 class="main-compare-page__title js-page-compare-title">
                 {{- 'products.product.no_results_compare' | t -}}
             </h3>
-        </page-wishlist>
+        </page-compare>
     </div>
 </div>
-<div class="compare-pages">
-    <div class="compare-page">
-        <div class="column compare__header">
-            <div class="compare-item">Product Name</div>
-            <div class="compare-item">Image</div>
-            <div class="compare-item">Rating</div>
-            <div class="compare-item">Price</div>
-            <div class="compare-item">Description</div>
-            <div class="compare-item">Manufacturer</div>
-            <div class="compare-item">Availability</div>
-            <div class="compare-item">Product Code</div>
-            <div class="compare-item">Weight</div>
-            <div class="compare-item">Option</div>
-            <div class="compare-item">Action</div>
-        </div>
-        <div class="column compare__products">
-            <div class="compare__product">
-                <!-- product 1 -->
-                <div class="compare-item">Product 1 Name</div>
-                <div class="compare-item">Product 1 Image</div>
-                <div class="compare-item">Product 1 Rating</div>
-                <div class="compare-item">Product 1 Price</div>
-                <div class="compare-item">Product 1 Description</div>
-                <div class="compare-item">Product 1 Manufacturer</div>
-                <div class="compare-item">Product 1 Availability</div>
-                <div class="compare-item">Product 1 Product Code</div>
-                <div class="compare-item">Product 1 Weight</div>
-                <div class="compare-item">Product 1 Option</div>
-                <div class="compare-item">Product 1 Action</div>
-            </div>
-            <div class="compare__product">
-                <!-- product 2 -->
-                <div class="compare-item">Product 2 Name</div>
-                <div class="compare-item">Product 2 Image</div>
-                <div class="compare-item">Product 2 Rating</div>
-                <div class="compare-item">Product 2 Price</div>
-                <div class="compare-item">Product 2 Description</div>
-                <div class="compare-item">Product 2 Manufacturer</div>
-                <div class="compare-item">Product 2 Availability</div>
-                <div class="compare-item">Product 2 Product Code</div>
-                <div class="compare-item">Product 2 Weight</div>
-                <div class="compare-item">Product 2 Option</div>
-                <div class="compare-item">Product 2 Action</div>
-            </div>
-        </div>
-    </div>
-</div>
+
 <script src="{{ 'main-compare.js' | asset_url }}" defer="defer"></script>
 
 {% schema %}
