--- a/scss/components/component-card-products.scss
+++ b/scss/components/component-card-products.scss
@@ -438,6 +438,7 @@ quantity-input {
 .price__box > span {
     min-height: 21px;
     display: inline-block;
+    box-sizing: border-box;
 }
 .card-product__price .price__item {
     font-size: 16px;
