--- a/scss/components/component-rating.scss
+++ b/scss/components/component-rating.scss
@@ -9,7 +9,8 @@
   --font-size: 1.7;
 }
 
-.card-product__content .rating-star {
+.card-product__content .rating-star,
+.item-rating .rating-star {
   --letter-spacing: 0.4;
   --font-size: 1.7;
 }
