--- a/scss/pages/section-main-compare.scss
+++ b/scss/pages/section-main-compare.scss
@@ -1,18 +1,19 @@
-page-wishlist {
+page-compare {
     display: block;
 }
-.main-wishlist-page {
-    padding-top: calc(.7*var(--pad-top-wishlist));
-    padding-bottom: calc(.7*var(--pad-bot-wishlist));
-    color: var(--text-post-color-wishlist);
-    background-color: var(--background-color-wishlist);
+
+.main-compare-page {
+    padding-top: calc(.7*var(--pad-top-compare));
+    padding-bottom: calc(.7*var(--pad-bot-compare));
+    color: var(--text-post-color-compare);
+    background-color: var(--background-color-compare);
     @media screen and (min-width: 991px) {
-        padding-top: var(--pad-top-wishlist);
-        padding-bottom: var(--pad-bot-wishlist);
+        padding-top: var(--pad-top-compare);
+        padding-bottom: var(--pad-bot-compare);
     }
   
     .container,.page-width {
-        max-width: var(--width-wishlist);
+        max-width: var(--width-compare);
     }
   
     &.full_width--true {
@@ -22,14 +23,14 @@ page-wishlist {
     }
   
     .card-product__vendor {
-        color: var(--text-post-color-wishlist);
+        color: var(--text-post-color-compare);
     }
   
     .card-product__title {
         a {
-            color: var(--title-post-color-wishlist);
+            color: var(--title-post-color-compare);
             &:hover {
-                color: var(--link-post-color-wishlist);
+                color: var(--link-post-color-compare);
             }
         }
     }
@@ -39,99 +40,142 @@ page-wishlist {
   
     &.content--right {
         text-align: right;
-        .card-post-template__tags,
-        .card-product__price .price__box,
-        .swatch-wrap .swatch--product  {
-            justify-content: flex-end;
-        }
-        
-        .card-post__tags--item {
-            margin-left: .8rem;
-        }
     }
   
     &.content--center {
         text-align: center;
-        .card-post-template__tags,
-        .card-product__price .price__box,
-        .swatch-wrap .swatch--product {
-            justify-content: center;
-        }
-        .card-post__tags--item {
-            margin-right: .4rem;
-            margin-left: .4rem;
-        }
     }
 
-    .main-wishlist-page__title {
+    .main-compare-page__title {
         margin: 0;
-        color: var(--title-post-color-wishlist);
+        color: var(--title-post-color-compare);
     }
 }
 
-.main-wishlist-page .product-list-container {
-    margin: 0;
-    display: block;
-    .template-main-collection__item {
-      max-width: 50%;
-      width: 100%;
-      @media (min-width: 320px) and (max-width: 1199px) {
-        max-width: 100%;
-      }
+.main-compare-page__table {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: stretch;
+    vertical-align: top;
+}
+
+.main-compare-page__head {
+    position: relative;
+    width: 199px;
+    border: 1px solid var(--color-light);
+    background-color: var(--color-white);
+    @media screen and (max-width: 550px) { 
+        width: 110px;
+    }
+}
+
+.main-compare-page__body {
+    width: calc(100% - 199px);
+    border: 1px solid var(--color-light);
+    border-left: none;
+    //overflow: hidden;
+    @media screen and (max-width: 550px) { 
+        width: calc(100% - 110px);
+    }
+}
+
+.main-compare-page__head--item {
+    padding: 15px 20px;
+    font-size: 16px;
+    border-top: 1px solid var(--color-light);
+    text-align: right;
+    @media screen and (max-width: 550px) { 
+        font-size: 13px;
+    }
+    &.item-main {
+        margin-bottom: 20px;
+        span {
+            visibility: hidden;
+        }
+    }
+    &.item-bg {
+        background-color: var(--color-input-background);
+    }
+}
+
+.main-compare-page__head--item:first-child {
+    border-top: none;
+}
+
+.main-compare-page__body--item {
+    padding: 15px 20px;
+    font-size: 16px;
+    border-top: 1px solid var(--color-light);
+    margin-left: -20px;
+    margin-right: -20px;
+    @media screen and (max-width: 550px) { 
+        font-size: 13px;
+    }
+    &.item-main {
+        margin: 0;
+        padding: 0 0 20px 0;
+        border-top: 0;
+    }
+    &.item-bg {
+        background-color: var(--color-input-background);
+    }
+    &.item-desc {
+        font-size: 14px;
+        @media screen and (max-width: 550px) { 
+            font-size: 12px;
+        }
+    }
+    &.item-rating {
+        .rating {
+            margin-top: 0;
+        }
+    }
+    .card-product__stock {
+        display: inline-block;
+    }
+}
+
+.main-compare-page__slider {
+    margin-right: 0;
+    margin-left: 0;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.main-compare-page__items {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: stretch;
+    margin-left: -1px;
+    box-sizing: border-box!important;
+    .main-compare-page__item {
+        //min-width: 270px;
+        //flex: auto;
+        padding: 20px 20px 0 20px;
+        border-left: 1px solid var(--color-light);
+        
+    }
+    .main-compare-page__inner { 
+        padding: 20px 20px 0 20px;
+        border-left: 1px solid var(--color-light);
     }
     .card-product__wrapper {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: flex-start;
-    }
-    .card-product__media-wrapper {
-        max-width: calc(40% - 30px);
-        margin-right: 30px;
-        margin-bottom: 0;
-        @media (min-width: 320px) and (max-width: 469px) {
-            margin-right: 15px;
-            max-width: calc(40% - 15px);
-        }
-    }
-    .card-product__content {
-        max-width: 60%;
+        //max-width: 270px;
         width: 100%;
-        padding-top: 10px;
-    }
-    .card-product__desc {
-        display: block;
-    }
-}
-
-
-
-.template-main-collection__list {
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-    z-index: 1;
-    margin: 0 -1rem -3rem;
-    list-style: none;
-    padding: 0;
-    @media screen and (min-width: 991px){
-        margin: 0 -1.5rem -3rem;
-    }
-}
-
-.template-main-collection__item {
-    padding: 0 1rem 3rem;
-    @media screen and (min-width: 991px){
-        padding: 0 1.5rem 3rem;
     }
     .card-product__media {
-      background: var(--color-white);
-      box-shadow: 0 3px 7px rgba(0,0,0, .15);
+        background: var(--color-white);
+        box-shadow: 0 3px 7px rgba(0,0,0, .15);
     }
     .card-product__image,
     .card-product__image--second {
-      height: calc(100% - 20px);
-      width: calc(100% - 20px);
-      margin: 10px;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
+    margin: 10px;
         @media (min-width: 320px) and (max-width: 469px) {
             height: calc(100% - 10px);
             width: calc(100% - 10px);
@@ -151,8 +195,8 @@ page-wishlist {
         }
     }
     .card-product__btns {
-        .card-product__button-wishlist {
-            .icon-heart {
+        .card-product__button-compare {
+            .icon-compare {
                 display: none;
             }
             .icon-trash {
@@ -161,107 +205,20 @@ page-wishlist {
             }
         }
     }
-    
+    .card-product__form .swatch {
+        display: none;
+    }
 }
 
-.compare {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-  }
-  
-  .compare__header {
-    width: 180px;
-    padding: 20px;
-    font-size: 18px;
-    font-weight: bold;
-    background-color: #f0f0f0;
-  }
-  
-  .compare__products {
-    width: calc(100% - 180px);
-    display: flex;
-    flex-wrap: wrap;
-    align-items: flex-start;
-  }
-  
-  .compare__product {
-    width: calc((100% - 180px) / 2);
-    padding: 20px;
-    border: 1px solid #e0e0e0;
-  }
-  
-  .compare__product:not(:last-child) {
-    margin-right: 20px;
-  }
-  
-  .compare__product-title {
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .compare__product-image {
-    width: 100%;
-    height: 200px;
-    background-color: #f0f0f0;
-    margin-bottom: 10px;
-  }
-  
-  .compare__product-rating {
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    margin-bottom: 10px;
-  }
-  
-  .compare__product-rating i {
-    color: #f39c12;
-  }
-  
-  .compare__product-price {
-    font-size: 18px;
-    font-weight: bold;
-    color: #27ae60;
-    margin-bottom: 10px;
-  }
-  
-  .compare__product-description {
-    font-size: 14px;
-    margin-bottom: 10px;
-  }
-  
-  .compare__product-manufacturer,
-  .compare__product-availability,
-  .compare__product-code,
-  .compare__product-weight,
-  .compare__product-option,
-  .compare__product-action {
-    font-size: 14px;
-    margin-bottom: 10px;
-  }
-  
-  .compare__product-action button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #27ae60;
-    color: #fff;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .compare__header {
-      width: 100%;
-    }
-  
-    .compare__product {
-      width: 100%;
-      margin-right: 0;
-      margin-bottom: 20px;
-    }
-  }
+.modal__button--compare {
+    display: none!important;
+}
+
+.swiper-container .swiper-button-next {
+    right: 0;
+    top: 32px;
+} 
+.swiper-container .swiper-button-prev {
+    top: 32px;
+    right: 45px;
+}
