--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -38,6 +38,7 @@
 {{ 'component-mobile-menu.css' | asset_url | stylesheet_tag }}
 {{ 'component-search-modal.css' | asset_url | stylesheet_tag }}
 {{ 'component-search-tabs.css' | asset_url | stylesheet_tag }}
+{{ 'component-swiper.css' | asset_url | stylesheet_tag }}
 
 <sticky-header
     id="shopify-section-header"
