--- a/scss/components/component-card-products.scss
+++ b/scss/components/component-card-products.scss
@@ -1,3 +1,58 @@
+/* component-badge */
+
+.badge {
+    background-color: var(--color-reverse);
+    border: .1rem solid var(--color-black);
+    border-radius: .3rem;
+    color: var(--color-ink);
+    display: inline-block;
+    font-size: 1.2rem;
+    font-weight: 500;
+    letter-spacing: -0.02em;
+    line-height: 1;
+    padding: 0.6rem 1.3rem;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: var(--america-mono-font);
+}
+
+.card-product__price {
+    margin-bottom: 1rem;
+    .price__item--sale {
+        color: var(--color-black);
+    }
+    .price__box {
+        display: flex;
+        align-items: center;
+        min-height: 21px;
+    }
+    .price__item {
+        display: inline-block;
+        padding-right: .4rem;
+    }
+    &.price--on-sale {
+        .price__item--regular {
+            color: var(--color-black);
+            opacity: .7;
+        }
+        .price__item--sale {
+            color: var(--color-danger);
+        }
+        .badge.sale {
+            display: inline-block;
+        }
+    }
+
+    .badge.sale {
+        font-size: 1.1rem;
+        padding: .3rem .6rem;
+        display: none;
+        border-color: var(--color-danger);
+        background-color: var(--color-danger);
+        color: var(--color-white);
+    }
+}
+
 .card-product__wrapper {
     position: relative;
 }
