--- a/scss/components/component-mega-menu.scss
+++ b/scss/components/component-mega-menu.scss
@@ -322,6 +322,24 @@
     width: 100%;
     max-width: 10rem;
     margin-right: 2rem;
+    .mega-menu-product-post__media {
+		background: var(--color-white);
+        box-shadow: 0 3px 7px rgba(0,0,0, .15);
+	}
+	.mega-menu-product-post__image {
+		height: calc(100% - 10px);
+        width: calc(100% - 10px);
+        margin: 5px;
+	}
+	.mega-menu-product-post__media::after {
+		content: "";
+        border: solid 5px var(--color-white);
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        left:0;
+        top: 0;
+	}
 }
 
 .mega-menu-product-post__media {
